--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,6 +9,6 @@ jobs:
     - uses: actions/checkout@v4 # Adds a step to checkout the repository code
 
     - name: Hello world.       # name of step
-      uses: raggsy01/hello-world-javascript-action.git
+      uses: raggsy01/hello-world-javascript-action@v1.1
       with:
         who-to-greet: 'Mona the Octocat'
