--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,5 +8,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4 # Adds a step to checkout the repository code
 
+    -name: Build
+     run: dotnet build
+
     - name: Hello world.       # name of step
       run: echo 'Hello world'
