--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,3 +11,5 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
                dotnet-version: ${{ matrix.dotnet-version }}
+    - run: npm install
+    - run: npm run build
