--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,5 +11,12 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
                dotnet-version: ${{ matrix.dotnet-version }}
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
     - run: npm install
-    - run: npm run build
+    - run: npm run build --if-present
+    - run: ls
