--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,7 +10,7 @@ on:
  
 jobs:
   dotnet:
-    name: Build then test C#
+    name: Build and test C#
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
