--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -60,3 +60,16 @@ jobs:
       - name: Run TypeScript tests
         run: npm test
         working-directory: ./DotnetTemplate.Web
+
+     - name: Post a message in a channel
+       uses: slackapi/slack-github-action@v2.1.1
+       with:
+       webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+       webhook-type: incoming-webhook
+       payload: |
+        text: "*GitHub Action build result*: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+        blocks:
+        - type: "section"
+          text:
+            type: "mrkdwn"
+            text: "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
