--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -55,7 +55,20 @@ jobs:
       - name: Run TypeScript linter
         run: npm run lint
         working-directory: ./DotnetTemplate.Web
- 
+
+   Notify:
+     - name: Post a message in a channel
+       uses: slackapi/slack-github-action@v2.1.1
+       with:
+       webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+       webhook-type: incoming-webhook
+       payload: |
+       text: "*GitHub Action build result*: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+       blocks:
+        - type: "section"
+          text:
+            type: "mrkdwn"
+            text: "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}" 
       # Run TypeScript tests
       - name: Run TypeScript tests
         run: npm test
