--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,7 +62,7 @@ jobs:
         working-directory: ./DotnetTemplate.Web
 
   Notify:
-     - name: Post a message in a channel
+       name: Post a message in a channel
        uses: slackapi/slack-github-action@v2.1.1
        with:
        webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
