--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,16 +62,16 @@ jobs:
         working-directory: ./DotnetTemplate.Web
 
   Notify:
-       name: Post a message in a channel
-       uses: slackapi/slack-github-action@v2.1.1
-       with:
-       webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
-       webhook-type: incoming-webhook
-       payload: |
-       text: "*GitHub Action build result*: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
-       blocks:
-        - type: "section"
-          text:
-            type: "mrkdwn"
-            text: "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}" 
-      
+       name: Slack Notification
+       runs-on: ubuntu-latest
+       needs: [dotnet, typescript]
+       if: always()
+       steps:
+      - name: Slack Notification (Success)
+        uses: act10ns/slack@v2
+        with:
+          channel: '#alerts-corndel-gha'
+          status: ${{ job.status }}
+          # message: "CI Workflow completed with status: ${{ job.status }}"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
